<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/silveryoung"
    tools:context=".view.fragment.PrevMatchFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:elevation="4dp"
        android:background="@drawable/rounded_full_white">

        <Spinner
            android:id="@+id/spinnerTeams"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            />
        
    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swiperefreshPrevMatch"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerPrevMatch"
            android:background="@color/silveryoung"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>