<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        android:iconifiedByDefault="false"
        app:showAsAction="ifRoom" />
</menu>