<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_matches"
        android:icon="@drawable/icon_soccer"
        android:title="@string/title_matches" />

    <item
        android:id="@+id/navigation_teams"
        android:icon="@drawable/ic_ball"
        android:title="@string/title_teams" />

    <item
        android:id="@+id/navigation_favorites_match"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites" />

</menu>
